# rustypw

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  cross.yml
src/: bw.rs  cli.rs  command.rs  config.rs  files.rs  lib.rs  main.rs  session.rs
src/bw/: mod.rs
src/jconf/: data.rs  jconf.rs  mod.rs
src/store/: mod.rs
src/store/bw/: jstore.rs  mod.rs  session.rs
src/store/local/: crypto.rs  mod.rs  vault.rs
src/vault/: crypto.rs  mod.rs
tests/: vault.rs
