[package]
name = "rpw"
version = "0.1.0"
authors = ["Patrik Lundgren"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rpassword = "4.0"
rust-argon2 = "0.5"
openssl = { version = "0.10", features = ["vendored"] }
