[package]
name = "rustypw"
version = "0.1.1"
authors = ["Patrik Lundgren <patrik.lundgren.95@gmail.com>"]
edition = "2018"
description = "A simple, small cli based password manager"
repository = "https://github.com/PatrikLundgren/rustypw"
license = "GPL-2.0"
readme = "README.md"
include = [
	"src/**/*",
	"Cargo.toml",
	"LICENSE",
	"README.md"
]
keywords = ["cli", "password"]
categories = ["command-line-interface"]

[dependencies]
dirs = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rpassword = "4.0"
rust-argon2 = "0.5"
openssl = { version = "0.10", features = ["vendored"] }
rustyline = "6.3.0"
clap = "2.33.3"
anyhow = "1.0"

[lib]
name = "rlib"
path = "src/lib.rs"

[[bin]]
name = "rpw"
path = "src/main.rs"
